# alexander-mead.github.io

./: .env.example  .gitignore  README.md  build.sh  covid.html  covid_BC.html  covid_Canada.html  covid_UK.html  covid_world.html  gravity.html  index.html  mandelplot.html  maths.html  menu.js  nbody.html  orbital.html  orbits.html  pyproject.toml  samconfig.toml  serve.sh  template.base.yaml  template.yaml  universe.html  worlds.html
.github/: pull_request_template.md
css/: main.css  reset.css
functions/: config.yaml
functions/mandelbrot/: .env.example  .gitignore  Dockerfile  build.sh  image.py  lambda.py  mandelbrot.py  pyproject.toml  samconfig.toml  template.yaml  test.sh
functions/mandelbrot/Fortran/: __init__.py  clean.sh  f2py.sh  f90wrap_mandelbrot.f90  mandelbrot.f90  mandelbrot.mod  mandelbrot.py
functions/mandelbrot/scripts/: deploy.sh  test.sh
functions/nbody/: .env.example  .gitignore  Dockerfile  build.sh  lambda.py  nbody.py  pyproject.toml  requirements.txt  samconfig.toml  template.base.yaml  test.sh  training.py
functions/nbody/scripts/: deploy.sh  test.sh
functions/worlds/: .env.example  .gitignore  Dockerfile  lambda.py  main.py  pyproject.toml  template.yaml
functions/worlds/scripts/: build.sh  deploy.sh  example.py  test.sh
html/: footer.html
scripts/: mandelbrot.js  nbody.js  script.js  worlds.js
