[tool.poetry]
name = "mandelbrot"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Alexander Mead <alexander.j.mead@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
numba = "^0.58.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
