[project]
name = "worlds-api"
version = "0.1.0"
description = "API for terrain generation."
authors = [
    { name = "Alexander Mead", email = "alexander.j.mead@googlemail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "healpy>=1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "scipy>=1.16.2",
    "world-generator",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "requests>=2.32.5",
    "ruff>=0.12.11",
    "uvicorn>=0.38.0",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
world-generator = { git = "https://github.com/alexander-mead/world-generator", tag = "v0.1.0" }
